Package: R.rsp
==============

Version: 0.12.2 [2013-12-15]
o Now the code generated by RspRSourceCodeFactory provides a rmeta()
  function for getting and setting document metadata.


Version: 0.12.1 [2013-12-14]
o Now rfile() accepts also non-RSP documents, e.g. rfile("report.md"),
  rfile("report.Rnw"), and rfile("report.tex").  This also means that
  all RSP documents must use the *.rsp filename extension in order for
  rfile() to automatically recognize it as RSP.  To process files with
  custom extensions as RSP, do rfile(RspFileProduct("report.custom",
  type="application/x-rsp")).
o Now getType() for RspFileProduct works also for URLs.
o BUG FIX: compileRsp() did not acknowledge argument 'postprocess'.


Version: 0.12.0 [2013-12-13]
o Now rfile() tries to rename the generated output file, iff its
  filename can be renamed using variable substitutions.  For instance,
  rfile('${foo}.txt.rsp') will try to rename output file '${foo}.txt'
  to 'SampleA.txt', if variable 'foo' is set to say 'SampleA' (either
  globally or by the RSP document).  If the variable is not set, the
  output file will remain '${foo}.txt'.  Requires R.utils (>= 1.28.6).
o BUG FIX: compileRsp(..., postprocess=TRUE) would throw 'Error in
  UseMethod("process"): no applicable method for 'process' applied to
  an object of class "character"'.  Added system test for compileRsp().


Version: 0.11.0 [2013-12-12]
o SIMPLIFICATION: Now the registered 'rsp::rsp' engine postprocesses
  the RSP document by default.  This means that RSP-embedded Markdown
  vignettes will be turned into HTML documents just as RSP-embedded
  LaTeX vignettes will become PDF documents.  It also means that such
  engines will no longer rely on the R 'tools' package to compile
  TeX output into PDFs.


Version: 0.10.3 [2013-12-06]
o CLEANUP: Dropped obsolete autoload():s.


Version: 0.10.2 [2013-11-23]
o BUG FIX: rsource() would not evaluate in the current environment.
  Added a package system test for this.

